client: Fix “Next” button missing on mobile
This accidentally regressed in 249f68ee058fdeb3ba36dec4e640c32af5cbb273 where it was shown through `.entry-smartphone-share button`.

Fixes: https://github.com/fossar/selfoss/issues/1406

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1412,6 +1412,10 @@ span.offline-count.diff {
         margin-bottom: 10px;
     }
 
+    .entry-smartphone-share .entry-next {
+        display: block;
+    }
+
     .entry-smartphone-share li {
         list-style: none;
         display: inline-block;
